--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.js",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "cleanup": "node src/utils/cleanupUsers.js",
+    "delete-all-users": "node src/utils/deleteAllUsers.js",
+    "delete-everything": "node src/utils/deleteEverything.js",
+    "view-db": "node src/utils/viewDatabase.js"
   },
   "type": "module",
   "keywords": [],
